crates/seatbelt/src/breaker/snapshots/seatbelt__breaker__config__tests__quick_half_open_mode_snapshot.snap
---
source: crates/seatbelt/src/breaker/config.rs
expression: config
---
{
  "enabled": true,
  "failure_threshold": 0.1,
  "min_throughput": 100,
  "sampling_duration": "30s",
  "break_duration": "5s",
  "half_open_mode": "quick",
  "abandoned_policy": {
    "rate_threshold": 1.0
  }
}
